--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing-Page Odin Project</title>
+    <title>Project Second</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+   
 </body>
 </html>
