--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   
+   <section class="one">
+<div class="aey">
+    <p id="logo">Header Logo</p>
+ <ul>
+     <li>header link one</li>
+    <li>header link two</li>
+    <li>header link three</li>
+ </ul>
+</div>
+   </section> 
 </body>
 </html>
